--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                     <!-- <h4>UI/UX Designer</h4> -->
                     <div class="social">
-                        <a href="https://www.facebook.com/profile.php?id=61564007933031"><i class="fab fa-facebook" style="color:var(--blue)"></i></a>
+                        <a href="https://github.com/sharma3263"><i class="fab fa-github" style="color:var(--blue)"></i></a>
                         <a href="https://x.com/sharma_3263"><i class="fab fa-twitter"  style="color:var(--skyblue)"></i></a>
                         <a href="https://wa.me/7206152622"><i class="fab fa-whatsapp"  style="color:var(--dark-pink)"></i></a>
                         <a href="https://www.linkedin.com/in/parul-sharma-886a79227?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BEGK5vXnHTsmPrEouB4%2Flpw%3D%"><i class="fab fa-linkedin"  style="color:var(--light-blue)"></i></a>
@@ -73,7 +73,7 @@
 
             </div>
             <button class="download-btn" aria-label="Download my CV">
-      <a href="path/to/your/cv.pdf" download>
+      <a href="https://drive.google.com/file/d/1rEq39NO4DwlbBTOjXdp0DkYKl8cSj3Lb/view?usp=sharing" download>
         <i class="fa fa-download"></i> Download CV
       </a>
     </button>
